--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ f.each(q,function(a,b){f.fn.DataTable[a]=b});return f.fn.dataTable});
 </head>
 
 
-<script src= 'allRows.js'></script>
+<script src= 'allRows_98_09_27.js'></script>
 <script>
 console.log('allRows = ', allRows);
 </script>
