--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ f.each(q,function(a,b){f.fn.DataTable[a]=b});return f.fn.dataTable});
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>React Starter</title>
+  <title>فیلتر بورس</title>
 </head>
 
 
