--- a/out_98_10_07/ct_98_10_07.html
+++ b/out_98_10_07/ct_98_10_07.html
@@ -17,10 +17,7 @@
 <thead><tr><th>نماد</th>
 <th>حجم</th>
 <th>تعداد</th></tr></thead><tbody>
-<tr><td>اوان</td>
-<td>2,057,291</td>
-<td>2</td>
-</tr><tr><td>واعتبار</td>
+<tr><td>واعتبار</td>
 <td>3,000</td>
 <td>1</td>
 </tr><tr><td>فلوله</td>
@@ -1112,6 +1109,9 @@
 </tr><tr><td>وبملت</td>
 <td>24,135,379</td>
 <td>22</td>
+</tr><tr><td>اوان</td>
+<td>2,057,291</td>
+<td>2</td>
 </tr>
 </tbody>
 </table>
