--- a/out_98_10_09/ct_98_10_09.html
+++ b/out_98_10_09/ct_98_10_09.html
@@ -17,9 +17,9 @@
 <thead><tr><th>نماد</th>
 <th>حجم</th>
 <th>تعداد</th></tr></thead><tbody>
-<tr><td>شپترو</td>
-<td>100,000</td>
-<td>1</td>
+<tr><td>وسرمد</td>
+<td>844,432</td>
+<td>2</td>
 </tr><tr><td>سبزوا</td>
 <td>27,240</td>
 <td>1</td>
@@ -722,6 +722,9 @@
 </tr><tr><td>وسبحان</td>
 <td>1,001,910</td>
 <td>2</td>
+</tr><tr><td>شپترو</td>
+<td>100,000</td>
+<td>1</td>
 </tr><tr><td>هاي وب</td>
 <td>1,843,669</td>
 <td>4</td>
@@ -1187,9 +1190,6 @@
 </tr><tr><td>سپ</td>
 <td>150,000</td>
 <td>1</td>
-</tr><tr><td>وسرمد</td>
-<td>844,432</td>
-<td>2</td>
 </tr>
 </tbody>
 </table>
