--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@ f.each(q,function(a,b){f.fn.DataTable[a]=b});return f.fn.dataTable});
 
 
 <script src= 'allRows_98_10_10.js'></script>
+<script allRows=allRows.filter(v=>v.cs != "68")></script>
 <body>
   <div id="root"></div>
   <noscript>
