--- a/out_98_10_10/ct_98_10_10.html
+++ b/out_98_10_10/ct_98_10_10.html
@@ -17,7 +17,10 @@
 <thead><tr><th>نماد</th>
 <th>حجم</th>
 <th>تعداد</th></tr></thead><tbody>
-<tr><td>وبملت</td>
+<tr><td>شپترو</td>
+<td>50,000</td>
+<td>1</td>
+</tr><tr><td>وبملت</td>
 <td>21,821,427</td>
 <td>24</td>
 </tr><tr><td>ثنام</td>
@@ -740,9 +743,6 @@
 </tr><tr><td>وشهر</td>
 <td>30,939,785</td>
 <td>6</td>
-</tr><tr><td>وملي</td>
-<td>50,000</td>
-<td>1</td>
 </tr><tr><td>پتاير</td>
 <td>18,000</td>
 <td>1</td>
@@ -1271,7 +1271,7 @@
 </tr><tr><td>سپ</td>
 <td>1,624,502</td>
 <td>3</td>
-</tr><tr><td>شپترو</td>
+</tr><tr><td>وملي</td>
 <td>50,000</td>
 <td>1</td>
 </tr>
