--- a/out_98_10_11/ct_98_10_11.html
+++ b/out_98_10_11/ct_98_10_11.html
@@ -17,7 +17,10 @@
 <thead><tr><th>نماد</th>
 <th>حجم</th>
 <th>تعداد</th></tr></thead><tbody>
-<tr><td>وبملت</td>
+<tr><td>شپترو</td>
+<td>150,000</td>
+<td>1</td>
+</tr><tr><td>وبملت</td>
 <td>12,055,090</td>
 <td>28</td>
 </tr><tr><td>لپيام</td>
@@ -512,9 +515,6 @@
 </tr><tr><td>لبوتان</td>
 <td>106,366</td>
 <td>3</td>
-</tr><tr><td>كگهر</td>
-<td>937,053</td>
-<td>7</td>
 </tr><tr><td>ثفارس</td>
 <td>976,906</td>
 <td>1</td>
@@ -1196,9 +1196,9 @@
 </tr><tr><td>سپ</td>
 <td>387,787</td>
 <td>2</td>
-</tr><tr><td>شپترو</td>
-<td>150,000</td>
-<td>1</td>
+</tr><tr><td>كگهر</td>
+<td>937,053</td>
+<td>7</td>
 </tr>
 </tbody>
 </table>
