--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ f.each(q,function(a,b){f.fn.DataTable[a]=b});return f.fn.dataTable});
 
 
 <script src= 'allRows_98_10_11.js'></script>
-<script> allRows=allRows.filter(v=>Number(v.cs) != 68)</script>
+<script> /*allRows=allRows.filter(v=>Number(v.cs) != 68)*/</script>
 <body>
   <div id="root"></div>
   <noscript>
