--- a/out_98_10_14/ct_98_10_14.html
+++ b/out_98_10_14/ct_98_10_14.html
@@ -17,9 +17,9 @@
 <thead><tr><th>نماد</th>
 <th>حجم</th>
 <th>تعداد</th></tr></thead><tbody>
-<tr><td>شپترو</td>
-<td>2,000,386</td>
-<td>2</td>
+<tr><td>ما</td>
+<td>5,500,000</td>
+<td>6</td>
 </tr><tr><td>وبملت</td>
 <td>357,725,506</td>
 <td>20</td>
@@ -497,6 +497,9 @@
 </tr><tr><td>تيپيكو</td>
 <td>10,537,043</td>
 <td>12</td>
+</tr><tr><td>شپترو</td>
+<td>2,000,386</td>
+<td>2</td>
 </tr><tr><td>بزاگرس</td>
 <td>1,500,000</td>
 <td>1</td>
@@ -1172,9 +1175,6 @@
 </tr><tr><td>سپ</td>
 <td>4,300,000</td>
 <td>2</td>
-</tr><tr><td>ما</td>
-<td>5,500,000</td>
-<td>6</td>
 </tr>
 </tbody>
 </table>
