--- a/out_98_10_18/ct_98_10_18.html
+++ b/out_98_10_18/ct_98_10_18.html
@@ -17,27 +17,12 @@
 <thead><tr><th>نماد</th>
 <th>حجم</th>
 <th>تعداد</th></tr></thead><tbody>
-<tr><td>سبزوا</td>
-<td>1,523</td>
-<td>1</td>
-</tr><tr><td>وبملت</td>
-<td>209,105,641</td>
-<td>31</td>
-</tr><tr><td>ثنام</td>
-<td>1,111</td>
-<td>1</td>
-</tr><tr><td>حسينا</td>
-<td>300,000</td>
-<td>2</td>
-</tr><tr><td>اعتلاح</td>
-<td>10,000</td>
-<td>1</td>
+<tr><td>وبملت</td>
+<td>210,154,138</td>
+<td>53</td>
 </tr><tr><td>غدام</td>
 <td>50,000</td>
 <td>1</td>
-</tr><tr><td>خصدرا</td>
-<td>35,900</td>
-<td>5</td>
 </tr><tr><td>وسپه</td>
 <td>5,395,592</td>
 <td>4</td>
@@ -50,26 +35,17 @@
 </tr><tr><td>حتايد</td>
 <td>17,250</td>
 <td>2</td>
-</tr><tr><td>مفاخر</td>
-<td>200,000</td>
-<td>1</td>
 </tr><tr><td>دلر</td>
 <td>251,168</td>
 <td>3</td>
 </tr><tr><td>سخاش</td>
 <td>10,000</td>
 <td>1</td>
-</tr><tr><td>زماهان</td>
-<td>500,000</td>
-<td>1</td>
 </tr><tr><td>سفانو</td>
 <td>40,000</td>
 <td>1</td>
 </tr><tr><td>ساراب</td>
 <td>50,000</td>
-<td>1</td>
-</tr><tr><td>سفارود</td>
-<td>91,858</td>
 <td>1</td>
 </tr><tr><td>فخاس</td>
 <td>596,818</td>
@@ -80,12 +56,6 @@
 </tr><tr><td>كاما</td>
 <td>810,000</td>
 <td>3</td>
-</tr><tr><td>زفكا</td>
-<td>2,000,000</td>
-<td>1</td>
-</tr><tr><td>حريل</td>
-<td>2,000,000</td>
-<td>1</td>
 </tr><tr><td>دسبحان</td>
 <td>245,000</td>
 <td>3</td>
@@ -95,23 +65,11 @@
 </tr><tr><td>غمهرا</td>
 <td>5,000</td>
 <td>1</td>
-</tr><tr><td>ريشمك</td>
-<td>365,000</td>
-<td>4</td>
-</tr><tr><td>آريان</td>
-<td>18,500,000</td>
-<td>2</td>
-</tr><tr><td>ومعلم</td>
-<td>800,000</td>
-<td>2</td>
 </tr><tr><td>وپخش</td>
 <td>100,000</td>
 <td>1</td>
 </tr><tr><td>پكوير</td>
 <td>100,000</td>
-<td>1</td>
-</tr><tr><td>زكشت</td>
-<td>20,000</td>
 <td>1</td>
 </tr><tr><td>ورنا</td>
 <td>20,110,670</td>
@@ -119,21 +77,15 @@
 </tr><tr><td>وخارزم</td>
 <td>4,000,000</td>
 <td>1</td>
-</tr><tr><td>بكهنوج</td>
-<td>2,000,000</td>
-<td>1</td>
 </tr><tr><td>شاراك</td>
 <td>12,300,000</td>
 <td>7</td>
 </tr><tr><td>شپنا</td>
-<td>36,342,852</td>
-<td>10</td>
+<td>36,462,852</td>
+<td>11</td>
 </tr><tr><td>دزهراوي</td>
 <td>300,000</td>
 <td>1</td>
-</tr><tr><td>ذوب</td>
-<td>537,550,000</td>
-<td>12</td>
 </tr><tr><td>پارسيان</td>
 <td>3,433,775</td>
 <td>6</td>
@@ -141,11 +93,8 @@
 <td>37,800,000</td>
 <td>4</td>
 </tr><tr><td>كپارس</td>
-<td>457,230</td>
-<td>6</td>
-</tr><tr><td>وملت</td>
-<td>350</td>
-<td>1</td>
+<td>483,230</td>
+<td>11</td>
 </tr><tr><td>سصفها</td>
 <td>20,000</td>
 <td>1</td>
@@ -155,9 +104,6 @@
 </tr><tr><td>ولملت</td>
 <td>100,000</td>
 <td>1</td>
-</tr><tr><td>اطلس</td>
-<td>112,000</td>
-<td>2</td>
 </tr><tr><td>دسينا</td>
 <td>30,000</td>
 <td>1</td>
@@ -167,35 +113,11 @@
 </tr><tr><td>سرود</td>
 <td>10,000</td>
 <td>1</td>
-</tr><tr><td>چكاپا</td>
-<td>1,000,000</td>
-<td>1</td>
-</tr><tr><td>گوهر</td>
-<td>3,248,483</td>
-<td>2</td>
-</tr><tr><td>پخش</td>
-<td>210,000</td>
-<td>2</td>
-</tr><tr><td>بهپاك</td>
-<td>300,000</td>
-<td>1</td>
 </tr><tr><td>خريخت</td>
 <td>1,000,000</td>
 <td>1</td>
-</tr><tr><td>وحكمت</td>
-<td>500,000</td>
-<td>1</td>
 </tr><tr><td>فسازان</td>
 <td>200,076</td>
-<td>2</td>
-</tr><tr><td>زاگرس</td>
-<td>1,042,511</td>
-<td>4</td>
-</tr><tr><td>درهآور</td>
-<td>60,000</td>
-<td>2</td>
-</tr><tr><td>حسير</td>
-<td>150,000</td>
 <td>2</td>
 </tr><tr><td>ملت</td>
 <td>300,000</td>
@@ -206,18 +128,12 @@
 </tr><tr><td>شنفت</td>
 <td>1,047,782</td>
 <td>3</td>
-</tr><tr><td>غگلپا</td>
-<td>100,000</td>
-<td>1</td>
 </tr><tr><td>قهكمت</td>
 <td>50,000</td>
 <td>1</td>
 </tr><tr><td>پرديس</td>
 <td>5,368,340</td>
 <td>4</td>
-</tr><tr><td>پارتين</td>
-<td>3,000</td>
-<td>1</td>
 </tr><tr><td>افق ملت</td>
 <td>12,424</td>
 <td>1</td>
@@ -227,27 +143,15 @@
 </tr><tr><td>سفارس</td>
 <td>677,211</td>
 <td>3</td>
-</tr><tr><td>ثعمرا</td>
-<td>2,122,441</td>
-<td>3</td>
-</tr><tr><td>ماديرا</td>
-<td>2,470,075</td>
-<td>5</td>
 </tr><tr><td>ساروم</td>
 <td>50,000</td>
 <td>1</td>
 </tr><tr><td>كخاك</td>
 <td>343,294</td>
 <td>1</td>
-</tr><tr><td>غفارس</td>
-<td>10,000</td>
-<td>1</td>
 </tr><tr><td>شاملا</td>
 <td>188,709</td>
 <td>2</td>
-</tr><tr><td>واحيا</td>
-<td>90,200</td>
-<td>1</td>
 </tr><tr><td>خمهر</td>
 <td>100,000</td>
 <td>1</td>
@@ -257,17 +161,11 @@
 </tr><tr><td>خنصير</td>
 <td>120,000</td>
 <td>1</td>
-</tr><tr><td>آينده</td>
-<td>50,000</td>
-<td>1</td>
 </tr><tr><td>كچاد</td>
 <td>50,311,193</td>
 <td>16</td>
 </tr><tr><td>وبهمن</td>
 <td>6,800,000</td>
-<td>2</td>
-</tr><tr><td>دتوليد</td>
-<td>220,000</td>
 <td>2</td>
 </tr><tr><td>دفرا</td>
 <td>50,000</td>
@@ -284,27 +182,15 @@
 </tr><tr><td>تايرا</td>
 <td>3,000,000</td>
 <td>1</td>
-</tr><tr><td>وآفري</td>
-<td>2,826,862</td>
-<td>2</td>
 </tr><tr><td>كنور</td>
 <td>16,549,715</td>
 <td>8</td>
 </tr><tr><td>بنيرو</td>
-<td>104,815</td>
-<td>2</td>
+<td>818,891</td>
+<td>12</td>
 </tr><tr><td>شپديس</td>
-<td>2,720,638</td>
-<td>9</td>
-</tr><tr><td>ثتران</td>
-<td>150,000</td>
-<td>3</td>
-</tr><tr><td>شغدير</td>
-<td>4,500,000</td>
-<td>3</td>
-</tr><tr><td>وپست</td>
-<td>500,000</td>
-<td>1</td>
+<td>2,737,175</td>
+<td>10</td>
 </tr><tr><td>درازك</td>
 <td>110,000</td>
 <td>2</td>
@@ -312,26 +198,20 @@
 <td>20,092</td>
 <td>2</td>
 </tr><tr><td>بكام</td>
-<td>500,000</td>
-<td>3</td>
-</tr><tr><td>وآوا</td>
-<td>97,349</td>
-<td>3</td>
+<td>569,200</td>
+<td>6</td>
 </tr><tr><td>تاپيكو</td>
 <td>36,428,704</td>
-<td>5</td>
+<td>6</td>
 </tr><tr><td>شبهرن</td>
-<td>1,975,000</td>
-<td>4</td>
+<td>1,985,000</td>
+<td>5</td>
 </tr><tr><td>كروي</td>
 <td>700,000</td>
 <td>3</td>
 </tr><tr><td>اخابر</td>
-<td>53,199,300</td>
-<td>17</td>
-</tr><tr><td>آتيمس</td>
-<td>60,525</td>
-<td>1</td>
+<td>54,359,300</td>
+<td>23</td>
 </tr><tr><td>پكرمان</td>
 <td>820,000</td>
 <td>2</td>
@@ -340,28 +220,16 @@
 <td>10</td>
 </tr><tr><td>پارسان</td>
 <td>26,767,954</td>
-<td>9</td>
+<td>10</td>
 </tr><tr><td>كفرا</td>
 <td>302,000</td>
 <td>2</td>
-</tr><tr><td>ميدكو</td>
-<td>6,134,344</td>
-<td>4</td>
 </tr><tr><td>كترام</td>
 <td>1,000</td>
 <td>1</td>
-</tr><tr><td>وملل</td>
-<td>28,300,000</td>
-<td>6</td>
-</tr><tr><td>آساميد</td>
-<td>760,250</td>
-<td>2</td>
-</tr><tr><td>وهور</td>
-<td>1,700,000</td>
-<td>3</td>
 </tr><tr><td>فارس</td>
 <td>14,861,678</td>
-<td>11</td>
+<td>12</td>
 </tr><tr><td>ونيكي</td>
 <td>1,050,000</td>
 <td>2</td>
@@ -370,13 +238,7 @@
 <td>5</td>
 </tr><tr><td>وغدير</td>
 <td>85,021,724</td>
-<td>16</td>
-</tr><tr><td>زشگزا</td>
-<td>142,544</td>
-<td>1</td>
-</tr><tr><td>زشريف</td>
-<td>700,000</td>
-<td>1</td>
+<td>17</td>
 </tr><tr><td>خبهمن</td>
 <td>32,343,783</td>
 <td>6</td>
@@ -395,30 +257,18 @@
 </tr><tr><td>ركيش</td>
 <td>300,000</td>
 <td>1</td>
-</tr><tr><td>قجام</td>
-<td>100,000</td>
-<td>1</td>
 </tr><tr><td>وبصادر</td>
 <td>309,500,130</td>
 <td>7</td>
-</tr><tr><td>كاسپين</td>
-<td>353,967</td>
-<td>1</td>
 </tr><tr><td>سيمرغ</td>
 <td>525,000</td>
 <td>3</td>
-</tr><tr><td>الماس</td>
-<td>2,274</td>
-<td>1</td>
 </tr><tr><td>حفاري</td>
 <td>100,000</td>
 <td>1</td>
 </tr><tr><td>فخوز</td>
 <td>10,698,653</td>
 <td>8</td>
-</tr><tr><td>خكرمان</td>
-<td>2,994,758</td>
-<td>3</td>
 </tr><tr><td>سهرمز</td>
 <td>53,000</td>
 <td>2</td>
@@ -428,23 +278,11 @@
 </tr><tr><td>ما</td>
 <td>4,100,000</td>
 <td>3</td>
-</tr><tr><td>بزاگرس</td>
-<td>3,500,000</td>
-<td>2</td>
-</tr><tr><td>آكورد</td>
-<td>3,894,894</td>
-<td>4</td>
-</tr><tr><td>كگهر</td>
-<td>2,149,155</td>
-<td>7</td>
-</tr><tr><td>ولشرق</td>
-<td>400,000</td>
-<td>2</td>
 </tr><tr><td>جم</td>
 <td>1,115,000</td>
 <td>4</td>
-</tr><tr><td>زر</td>
-<td>21,174</td>
+</tr><tr><td>سبهان</td>
+<td>100</td>
 <td>1</td>
 </tr><tr><td>وپارس</td>
 <td>30,600,000</td>
@@ -458,30 +296,9 @@
 </tr><tr><td>دشيمي</td>
 <td>4,350</td>
 <td>1</td>
-</tr><tr><td>غشهداب</td>
-<td>500,000</td>
-<td>1</td>
-</tr><tr><td>بجهرم</td>
-<td>17,020,000</td>
-<td>3</td>
-</tr><tr><td>شراز</td>
-<td>892,328</td>
-<td>4</td>
-</tr><tr><td>رنيك</td>
-<td>1,600,000</td>
-<td>2</td>
-</tr><tr><td>آگاس</td>
-<td>159,000</td>
-<td>1</td>
 </tr><tr><td>ونفت</td>
 <td>4,849,922</td>
 <td>4</td>
-</tr><tr><td>عيار</td>
-<td>50,000</td>
-<td>1</td>
-</tr><tr><td>قاسم</td>
-<td>1,076,000</td>
-<td>3</td>
 </tr><tr><td>بركت</td>
 <td>1,550,000</td>
 <td>4</td>
@@ -489,37 +306,25 @@
 <td>20,000</td>
 <td>1</td>
 </tr><tr><td>كمند</td>
-<td>47,553,985</td>
-<td>5</td>
-</tr><tr><td>سفاسي</td>
-<td>1,500</td>
-<td>1</td>
+<td>47,988,985</td>
+<td>8</td>
 </tr><tr><td>غاذر</td>
 <td>5,000</td>
 <td>1</td>
-</tr><tr><td>شپاس</td>
-<td>250</td>
-<td>1</td>
 </tr><tr><td>شبندر</td>
 <td>27,317,973</td>
-<td>6</td>
+<td>7</td>
 </tr><tr><td>فملي</td>
-<td>120,249,114</td>
-<td>29</td>
+<td>120,369,114</td>
+<td>30</td>
 </tr><tr><td>كگل</td>
-<td>28,656,863</td>
-<td>14</td>
+<td>28,756,863</td>
+<td>15</td>
 </tr><tr><td>شيران</td>
 <td>42,401,020</td>
 <td>6</td>
 </tr><tr><td>قشكر</td>
 <td>100,000</td>
-<td>1</td>
-</tr><tr><td>آسام</td>
-<td>200</td>
-<td>1</td>
-</tr><tr><td>اعتلا</td>
-<td>170,000</td>
 <td>1</td>
 </tr><tr><td>شفا</td>
 <td>700,000</td>
@@ -533,135 +338,84 @@
 </tr><tr><td>سيدكو</td>
 <td>400,000</td>
 <td>1</td>
-</tr><tr><td>توريل</td>
-<td>70,863</td>
-<td>1</td>
 </tr><tr><td>وساپا</td>
 <td>1,049,999</td>
 <td>3</td>
-</tr><tr><td>غويتا</td>
-<td>270,250</td>
-<td>3</td>
-</tr><tr><td>خديزل</td>
-<td>5,800,000</td>
-<td>2</td>
-</tr><tr><td>سامان</td>
-<td>500,000</td>
-<td>1</td>
 </tr><tr><td>كرماشا</td>
 <td>1,307,683</td>
 <td>3</td>
 </tr><tr><td>فاذر</td>
 <td>999</td>
 <td>1</td>
-</tr><tr><td>شتوكا</td>
-<td>1,135,128</td>
-<td>2</td>
 </tr><tr><td>شيراز</td>
-<td>4,317,254</td>
-<td>4</td>
+<td>4,370,514</td>
+<td>6</td>
 </tr><tr><td>شلعاب</td>
 <td>51,000</td>
 <td>2</td>
 </tr><tr><td>سپاس</td>
-<td>1,629,966</td>
-<td>4</td>
-</tr><tr><td>اتكاي</td>
-<td>4,103,800</td>
-<td>2</td>
+<td>2,233,766</td>
+<td>9</td>
 </tr><tr><td>قصفها</td>
 <td>420,000</td>
 <td>2</td>
 </tr><tr><td>رانفور</td>
-<td>160,000</td>
-<td>2</td>
+<td>200,000</td>
+<td>4</td>
 </tr><tr><td>رتاپ</td>
 <td>13,000,000</td>
 <td>5</td>
 </tr><tr><td>فجر</td>
-<td>9,649,217</td>
-<td>6</td>
-</tr><tr><td>وشهر</td>
-<td>22,105,527</td>
-<td>4</td>
-</tr><tr><td>بساما</td>
-<td>500,000</td>
-<td>1</td>
+<td>9,799,217</td>
+<td>7</td>
 </tr><tr><td>وملي</td>
 <td>500</td>
+<td>1</td>
+</tr><tr><td>پتاير</td>
+<td>21,000</td>
 <td>1</td>
 </tr><tr><td>سخوز</td>
 <td>205,000</td>
 <td>3</td>
 </tr><tr><td>خپارس</td>
-<td>67,900,020</td>
-<td>5</td>
+<td>68,900,020</td>
+<td>6</td>
 </tr><tr><td>غبشهر</td>
 <td>100,000</td>
 <td>1</td>
 </tr><tr><td>كبافق</td>
 <td>50,000</td>
 <td>1</td>
-</tr><tr><td>وسبحان</td>
-<td>4,800,000</td>
-<td>4</td>
 </tr><tr><td>كوير</td>
 <td>1,000,053</td>
 <td>2</td>
 </tr><tr><td>خراسان</td>
-<td>2,179,586</td>
-<td>4</td>
+<td>2,219,586</td>
+<td>5</td>
 </tr><tr><td>دسبحا</td>
 <td>220,000</td>
 <td>2</td>
-</tr><tr><td>فزرين</td>
-<td>160,000</td>
-<td>1</td>
-</tr><tr><td>وگستر</td>
-<td>1,000</td>
-<td>1</td>
-</tr><tr><td>ودي</td>
-<td>1,000,000</td>
-<td>1</td>
-</tr><tr><td>شرانل</td>
-<td>2,539,724</td>
-<td>5</td>
 </tr><tr><td>شگل</td>
 <td>110,200</td>
 <td>3</td>
-</tr><tr><td>فاهواز</td>
-<td>300,000</td>
-<td>1</td>
 </tr><tr><td>كالا</td>
 <td>4,300,000</td>
 <td>2</td>
-</tr><tr><td>دي</td>
-<td>3,030,000</td>
-<td>2</td>
 </tr><tr><td>خساپا</td>
-<td>148,386,044</td>
-<td>6</td>
+<td>151,586,044</td>
+<td>10</td>
 </tr><tr><td>قثابت</td>
 <td>20,000</td>
 <td>1</td>
 </tr><tr><td>وسينا</td>
-<td>14,590,000</td>
-<td>13</td>
-</tr><tr><td>صايند</td>
-<td>33,000</td>
-<td>1</td>
+<td>17,430,000</td>
+<td>24</td>
 </tr><tr><td>امين يكم</td>
-<td>21,582,075</td>
-<td>11</td>
+<td>27,946,575</td>
+<td>15</td>
 </tr><tr><td>بفجر</td>
 <td>8,504,250</td>
 <td>7</td>
-</tr><tr><td>سمگا</td>
-<td>10,102,975</td>
-<td>6</td>
-</tr><tr><td>اتكام</td>
-<td>1,400,000</td>
-<td>2</td>
 </tr><tr><td>وصنا</td>
 <td>200,000</td>
 <td>1</td>
@@ -674,24 +428,15 @@
 </tr><tr><td>وخاور</td>
 <td>5,734,143</td>
 <td>4</td>
-</tr><tr><td>دسانكو</td>
-<td>180,000</td>
-<td>2</td>
 </tr><tr><td>سيستم</td>
 <td>200,000</td>
 <td>1</td>
 </tr><tr><td>وكار</td>
 <td>2,100,611</td>
 <td>2</td>
-</tr><tr><td>عسناسنگ</td>
-<td>1</td>
-<td>1</td>
 </tr><tr><td>وبانك</td>
 <td>7,200,000</td>
 <td>5</td>
-</tr><tr><td>ولبهمن</td>
-<td>1,000,000</td>
-<td>1</td>
 </tr><tr><td>شبريز</td>
 <td>1,212,356</td>
 <td>4</td>
@@ -705,11 +450,8 @@
 <td>120,000</td>
 <td>2</td>
 </tr><tr><td>افق</td>
-<td>422,100</td>
-<td>3</td>
-</tr><tr><td>تاپكيش</td>
-<td>900,000</td>
-<td>2</td>
+<td>442,100</td>
+<td>4</td>
 </tr><tr><td>ختور</td>
 <td>350,000</td>
 <td>2</td>
@@ -722,26 +464,14 @@
 </tr><tr><td>شتران</td>
 <td>21,618,639</td>
 <td>6</td>
-</tr><tr><td>بپاس</td>
-<td>448,528</td>
-<td>1</td>
-</tr><tr><td>ميدكوح</td>
-<td>155,200</td>
-<td>1</td>
 </tr><tr><td>سغرب</td>
 <td>500,000</td>
 <td>1</td>
 </tr><tr><td>واميد</td>
 <td>8,210,306</td>
 <td>5</td>
-</tr><tr><td>دكپسول</td>
-<td>1,500,000</td>
-<td>1</td>
 </tr><tr><td>غمارگ</td>
 <td>50,000</td>
-<td>1</td>
-</tr><tr><td>تبرك</td>
-<td>500,000</td>
 <td>1</td>
 </tr><tr><td>كيان</td>
 <td>22,039,051</td>
@@ -749,21 +479,12 @@
 </tr><tr><td>تصميم</td>
 <td>2,844,212</td>
 <td>1</td>
-</tr><tr><td>مارون</td>
-<td>550,557</td>
-<td>1</td>
-</tr><tr><td>ثپرديس</td>
-<td>517,859</td>
-<td>1</td>
 </tr><tr><td>فسرب</td>
 <td>150,000</td>
 <td>2</td>
 </tr><tr><td>فروس</td>
 <td>257</td>
 <td>1</td>
-</tr><tr><td>تپكو</td>
-<td>3,116,943</td>
-<td>5</td>
 </tr><tr><td>آپ</td>
 <td>700,000</td>
 <td>1</td>
@@ -782,48 +503,30 @@
 </tr><tr><td>وصنعت</td>
 <td>100,000</td>
 <td>1</td>
-</tr><tr><td>اوصتا</td>
-<td>38,914</td>
-<td>2</td>
 </tr><tr><td>والبر</td>
 <td>1,300,000</td>
 <td>3</td>
-</tr><tr><td>فرابورس</td>
-<td>13,877,707</td>
-<td>4</td>
 </tr><tr><td>ومعادن</td>
 <td>47,934,426</td>
 <td>9</td>
 </tr><tr><td>لوتوس</td>
 <td>9,488,800</td>
-<td>3</td>
-</tr><tr><td>ارفع</td>
-<td>6,951,067</td>
-<td>5</td>
+<td>4</td>
 </tr><tr><td>وپترو</td>
 <td>200,000</td>
 <td>1</td>
 </tr><tr><td>كاوهح</td>
 <td>3,044,699</td>
 <td>4</td>
-</tr><tr><td>سخند</td>
-<td>36,960</td>
-<td>1</td>
 </tr><tr><td>پرداخت</td>
 <td>550,000</td>
 <td>2</td>
 </tr><tr><td>ثاباد</td>
 <td>200</td>
 <td>1</td>
-</tr><tr><td>نوين</td>
-<td>1,600,000</td>
-<td>2</td>
 </tr><tr><td>غشاذر</td>
 <td>150,000</td>
 <td>1</td>
-</tr><tr><td>شاوان</td>
-<td>1,922,577</td>
-<td>2</td>
 </tr><tr><td>كاوه</td>
 <td>8,900,000</td>
 <td>6</td>
@@ -831,55 +534,34 @@
 <td>1,070,000</td>
 <td>3</td>
 </tr><tr><td>بورس</td>
-<td>6,003,355</td>
-<td>3</td>
+<td>6,003,455</td>
+<td>4</td>
 </tr><tr><td>حكشتي</td>
-<td>2,436,128</td>
-<td>1</td>
+<td>2,466,128</td>
+<td>2</td>
 </tr><tr><td>غشصفا</td>
 <td>72,611</td>
-<td>1</td>
-</tr><tr><td>دارا</td>
-<td>56,000</td>
 <td>1</td>
 </tr><tr><td>ونيرو</td>
 <td>3,000,000</td>
 <td>2</td>
 </tr><tr><td>پاكشو</td>
 <td>337,796</td>
-<td>5</td>
-</tr><tr><td>كي بي سي</td>
-<td>1,085,000</td>
-<td>3</td>
-</tr><tr><td>دشيري</td>
-<td>2,521</td>
-<td>1</td>
+<td>6</td>
 </tr><tr><td>قنيشا</td>
 <td>100,000</td>
 <td>1</td>
-</tr><tr><td>حبندر</td>
-<td>625</td>
-<td>1</td>
-</tr><tr><td>اپرداز</td>
-<td>3,553,467</td>
-<td>5</td>
 </tr><tr><td>خشرق</td>
 <td>445</td>
 <td>1</td>
 </tr><tr><td>وتجارت</td>
-<td>921,631,529</td>
-<td>14</td>
-</tr><tr><td>نطرين</td>
-<td>150,000</td>
-<td>1</td>
+<td>930,831,529</td>
+<td>16</td>
 </tr><tr><td>سرو</td>
 <td>500,000</td>
 <td>1</td>
 </tr><tr><td>فايرا</td>
 <td>200,500</td>
-<td>2</td>
-</tr><tr><td>گوهران</td>
-<td>1,250,000</td>
 <td>2</td>
 </tr><tr><td>كاردان</td>
 <td>33,433</td>
@@ -890,39 +572,21 @@
 </tr><tr><td>لخزر</td>
 <td>178,459</td>
 <td>1</td>
-</tr><tr><td>شپتروح</td>
-<td>10,000,000</td>
-<td>1</td>
 </tr><tr><td>خودرو</td>
-<td>96,084,383</td>
-<td>14</td>
+<td>96,584,383</td>
+<td>15</td>
 </tr><tr><td>مداران</td>
 <td>300,000</td>
 <td>3</td>
 </tr><tr><td>فيروزه</td>
 <td>28,640</td>
 <td>1</td>
-</tr><tr><td>دماوند</td>
-<td>9,550</td>
-<td>1</td>
-</tr><tr><td>آساس</td>
-<td>72,406</td>
-<td>1</td>
 </tr><tr><td>فاسمين</td>
 <td>6,807,729</td>
 <td>9</td>
-</tr><tr><td>دتوزيع</td>
-<td>10,885</td>
-<td>2</td>
 </tr><tr><td>فباهنر</td>
 <td>2,000,000</td>
 <td>2</td>
-</tr><tr><td>اعتماد</td>
-<td>7,669,430</td>
-<td>8</td>
-</tr><tr><td>قپيرا</td>
-<td>10,000</td>
-<td>1</td>
 </tr><tr><td>رمپنا</td>
 <td>39,140,428</td>
 <td>7</td>
@@ -938,48 +602,30 @@
 </tr><tr><td>صنوين</td>
 <td>2,304</td>
 <td>1</td>
-</tr><tr><td>شبصير</td>
-<td>552,705</td>
-<td>4</td>
 </tr><tr><td>همراه</td>
 <td>6,085,244</td>
 <td>8</td>
-</tr><tr><td>كاريس</td>
-<td>124,121</td>
-<td>2</td>
 </tr><tr><td>ديران</td>
 <td>75,000</td>
 <td>1</td>
 </tr><tr><td>پترول</td>
 <td>5,110,000</td>
 <td>5</td>
-</tr><tr><td>اوان</td>
-<td>100,000</td>
-<td>1</td>
 </tr><tr><td>تايراح</td>
 <td>1,040,936</td>
 <td>2</td>
 </tr><tr><td>ختوقا</td>
 <td>10,004,042</td>
-<td>1</td>
+<td>2</td>
 </tr><tr><td>دپارس</td>
-<td>1,053,949</td>
-<td>6</td>
+<td>1,100,949</td>
+<td>10</td>
 </tr><tr><td>پارند</td>
 <td>59,010,663</td>
-<td>15</td>
+<td>16</td>
 </tr><tr><td>شخارك</td>
 <td>587,465</td>
 <td>2</td>
-</tr><tr><td>زقيام</td>
-<td>30,000</td>
-<td>1</td>
-</tr><tr><td>دبالك</td>
-<td>70,000</td>
-<td>1</td>
-</tr><tr><td>ثروتم</td>
-<td>2,300</td>
-<td>1</td>
 </tr><tr><td>ولصنم</td>
 <td>100,000</td>
 <td>1</td>
