--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ f.each(q,function(a,b){f.fn.DataTable[a]=b});return f.fn.dataTable});
 
 
 <script src= 'allRows_98_10_21.js'></script>
-<script> /*allRows=allRows.filter(v=>Number(v.cs) != 68)*/</script>
+<script> date= "98/10/21"</script>
 
 <body>
   <div id="root"></div>
