--- a/out_98_10_30/ct_98_10_30.html
+++ b/out_98_10_30/ct_98_10_30.html
@@ -17,10 +17,7 @@
 <thead><tr><th>نماد</th>
 <th>حجم</th>
 <th>تعداد</th></tr></thead><tbody>
-<tr><td>شپترو</td>
-<td>7,000</td>
-<td>1</td>
-</tr><tr><td>سبزوا</td>
+<tr><td>سبزوا</td>
 <td>303,228</td>
 <td>2</td>
 </tr><tr><td>وبملت</td>
@@ -592,6 +589,9 @@
 <td>5</td>
 </tr><tr><td>قشكر</td>
 <td>5,442</td>
+<td>1</td>
+</tr><tr><td>شپترو</td>
+<td>7,000</td>
 <td>1</td>
 </tr><tr><td>اعتلا</td>
 <td>30,000</td>
