--- a/index.html
+++ b/index.html
@@ -207,6 +207,14 @@ f.each(q,function(a,b){f.fn.DataTable[a]=b});return f.fn.dataTable});
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
 <link rel="icon" href="https://smojmar.github.io/upload/icon.png">
 
+
+<script src= 'dataTables.buttons.min.js'></script>
+<script src= 'https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js'></script>
+<script src= 'https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js'></script>
+<script src= 'https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js'></script>
+<script src= 'https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js'></script>
+<script src= 'https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js'></script>
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
