--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ f.each(q,function(a,b){f.fn.DataTable[a]=b});return f.fn.dataTable});
 
 
 <script src= 'allRows_98_11_13s'></script>
-<script> date= "98/11/13/<script>
+<script> date= "98/11/13/"<script>
 
 <body>
   <div id="root"></div>
