--- a/index.html
+++ b/index.html
@@ -223,13 +223,8 @@ f.each(q,function(a,b){f.fn.DataTable[a]=b});return f.fn.dataTable});
 
 
 
+<script src= 'allRows_98_11_14.js'></script>
 <script> date= "98/11/14"</script>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script>
-axios.get('http://filterbourse.ir/api/allRows').then(response => {
-allRows = response.data;
-	});
-</script>
 
 <body>
   <div id="root"></div>
